[package]
name = "solana_leader_schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
serde = { version = "=1.0.144", features = [ "derive" ] }
solana-client = "=1.15.2"
solana-ledger = "=1.15.2"
solana-sdk = "=1.15.2"
